--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+<title>some stupid title</title>
 </head>
 <body>
+
+test
 
 </body>
 </html>
